--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -744,6 +744,178 @@ pilots:
       - SE2321000016-14RV
       - SE2321000016-BRCT
       - SE2321000016-152M
+      - SE2321000016-39KJ
+      - SE2321000016-674W
+      - SE2321000016-DCVM
+      - SE2321000016-81VB
+      - SE2321000016-12B8
+      - SE2321000016-11LS
+      - SE2321000016-3CLH
+      - SE2321000016-56LN
+      - SE2321000016-FT81
+      - SE2321000016-1K2W
+      - SE2321000016-CD96
+      - SE2321000016-5P8P
+      - SE2321000016-FW8N
+      - SE2321000016-9K1P
+      - SE2321000016-3HCH
+      - SE2321000016-8QP2
+      - SE2321000016-CVN5
+      - SE2321000016-CV58
+      - SE2321000016-FL1Z
+      - SE2321000016-CLBG
+      - SE2321000016-DCNM
+      - SE2321000016-9JWZ
+      - SE2321000016-F4L5
+      - SE165567766992-1909
+      - SE2321000016-G1WX
+      - SE2321000016-FT80
+      - SE2321000016-FL2L
+      - SE2321000016-CM18
+      - SE2321000016-DFLF
+      - SE2321000016-G4ND
+      - SE2321000016-CRB9
+      - SE2321000016-FL2M
+      - SE2321000016-CVN5
+      - SE2321000016-CH3W
+      - SE2321000016-CGNV
+      - SE2321000016-CH1D
+      - SE2321000016-CKMF
+      - SE2321000016-CF5M
+      - SE2321000016-8M3S
+      - SE2321000016-FL1R
+      - SE2321000016-CJ4G
+      - SE2321000016-5PZV
+      - SE2321000016-FTDD
+      - SE2321000016-FL2L
+      - SE2321000016-CRFL
+      - SE2321000016-CC3J
+      - SE2321000016-FKL2
+      - SE2321000016-CRR9
+      - SE2321000016-5L0Z
+      - SE2321000016-4CMN
+      - SE2321000016-FKJ6
+      - SE2321000016-CD96
+      - SE2321000016-DBKV
+      - SE2321000016-FKJ5
+      - SE2321000016-C1PT
+      - SE2321000016-957X
+      - SE2321000016-CC4J
+      - SE2321000016-FTDL
+      - SE2321000016-FL1X
+      - SE2321000016-DMVP
+      - SE2321000016-FKKV
+      - SE2321000016-FT88
+      - SE2321000016-8QP2
+      - SE2321000016-FPS4
+      - SE2321000016-FKHW
+      - SE2321000016-CGM8
+      - SE2321000016-D069
+      - SE2321000016-CWKD
+      - SE2321000016-D572
+      - SE2321000016-DD0Z
+      - SE2321000016-BS4B
+      - SE2321000016-DFVS
+      - SE2321000016-CS9M
+      - SE2321000016-DFL6
+      - SE2321000016-DG08
+      - SE2321000016-D5B0
+      - SE2321000016-DMF8
+      - SE2321000016-DJC9
+      - SE2321000016-DSK9
+      - SE2321000016-DV11
+      - SE2321000016-DVVL
+      - SE2321000016-DX8B
+      - SE2321000016-FL1T
+      - SE2321000016-DSMK
+      - SE2321000016-FMTR
+      - SE2321000016-FN7T
+      - SE2321000016-F3MZ
+      - SE2321000016-F27X
+      - SE2321000016-D7K0
+      - SE2321000016-F8R7
+      - SE2321000016-G0LR
+      - SE2321000016-BTG1
+      - SE2321000016-FZKN
+      - SE2321000016-CF5M
+      - SE2321000016-GDVN
+      - SE2321000016-CTWG
+      - SE2321000016-C087
+      - SE2321000016-CS9K
+      - SE2321000016-FKL2
+      - SE2321000016-FS5L
+      - SE2321000016-FKJ6
+      - SE2321000016-9FLG
+      - SE2321000016-CK2F
+      - SE2321000016-FKJ2
+      - SE2321000016-51NC
+      - SE2321000016-FL2F
+      - SE2321000016-CWDQ
+      - SE2321000016-DCNM
+      - SE2321000016-CTWH
+      - SE2321000016-F4L5
+      - SE2321000016-CGJ1
+      - SE2321000016-D572
+      - SE2321000016-C08D
+      - SE2321000016-FL2M
+      - SE5567122196-1007
+      - SE2321000016-D4MG
+      - SE2321000016-C6S1
+      - SE2321000016-FW85
+      - SE2321000016-C087
+      - SE2321000016-CH6C
+      - SE2321000016-CTWH
+      - SE2321000016-FKKZ
+      - SE2321000016-DFMJ
+      - SE2321000016-DVRN
+      - SE2321000016-102Q
+      - SE2321000016-FLH6
+      - SE2321000016-9FLG
+      - SE2321000016-FLH3
+      - SE2321000016-FT87
+      - SE2321000016-6G6C
+      - SE2321000016-FPTF
+      - SE2321000016-FLH0
+      - SE2321000016-FKJ0
+      - SE2321000016-FLGZ
+      - SE165567766992-14N0
+      - SE2321000016-50WQ
+      - SE2321000016-FL20
+      - SE2321000016-C08F
+      - SE2321000016-CQT7
+      - SE2321000016-CS37
+      - SE2321000016-CSWB
+      - SE2321000016-CGNV
+      - SE2321000016-D569
+      - SE2321000016-5BNJ
+      - SE2321000016-FT80
+      - SE2321000016-6DQ1
+      - SE2321000016-CDLS
+      - SE2321000016-FKKV
+      - SE2321000016-BGHV
+      - SE2321000016-FKKM
+      - SE2321000016-2M42
+      - SE2321000016-FKJ1
+      - SE2321000016-FNXJ
+      - SE2321000016-DCVM
+      - SE2321000016-81VB
+      - SE2321000016-CXNQ
+      - SE2321000016-CXNN
+      - SE2321000016-58KK
+      - SE2321000016-F6X5
+      - SE2321000016-D22X
+      - SE2321000016-CXPZ
+      - SE2321000016-CWKD
+      - SE2321000016-DV1P
+      - SE2321000016-CC77
+      - SE2321000016-9K1P
+      - SE2321000016-52LG
+      - SE2321000016-12VQ
+      - SE2321000016-6S3P
+      - SE2321000016-GJR3
+      - SE2321000016-13T8
+      - SE2321000016-5VVK
+      - SE2321000016-FL22
     activated:
       - &pf320
         name: *kf320
