INTYGFV-15697: Activate webcert react for an additional unit in Stockholm.

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -916,6 +916,7 @@ pilots:
       - SE2321000016-13T8
       - SE2321000016-5VVK
       - SE2321000016-FL22
+      - SE2321000016-4ZRR
       - SE2321000115-O52937
       - SE2321000115-O58108
       - SE2321000115-O44093
