--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -429,6 +429,7 @@ pilots:
       - PAS4412341119-101L # Region Halland
       - SE5565189692-101IU # Capio St Göran, Ortopedkliniken
       - SE5565189692-101H # Capio St Göran, Ortopedkliniken Avd 34
+      - SE2321000131-E000000000001 # Västra Götalandsregionen
     activated:
       - &pf320
         name: *kf320
