--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -4,7 +4,7 @@ artifact.name=refdata
 artifact.version=1.5.1.5
 
 git.url=https://github.com/sklintyg/refdata.git
-git.branch=master
+git.branch=main
 
 builder.image=lib-builder-image
 builder.image.tag=11.0.2
