BUILDENV: Update refdata to v2.0.0.

--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,10 +1,10 @@
 project.name=intyg
 
 artifact.name=refdata
-artifact.version=1.5.1.5
+artifact.version=2.0.0
 
 git.url=https://github.com/sklintyg/refdata.git
-git.branch=main
+git.branch=release/2023-1-SP4
 
 builder.image=lib-builder-image
 builder.image.tag=11.0.2
