BUILDENV: Prepare for release in main

--- a/src/main/resources/rehabstod/authorities.yaml
+++ b/src/main/resources/rehabstod/authorities.yaml
@@ -1,5 +1,5 @@
 # ====================================================================================================
-#   Konfiguration för Webcerts rollhantering
+#   Konfiguration för Rehabstöds rollhantering
 #
 #   YAML specifikation: http://www.yaml.org/spec/1.2/spec.html
 #
