--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -431,6 +431,7 @@ pilots:
       - SE5565189692-101H # Capio St Göran, Ortopedkliniken Avd 34
       - SE2321000131-E000000000001 # Västra Götalandsregionen
       - SE162321000255-O00001 # Region Skåne
+      - SE5565189692-31L # Capio Läkargruppens Kirurgmottagning
     activated:
       - &pf320
         name: *kf320
