INTYGFV-15997: Activate webcert react for Dalarna.

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -1406,6 +1406,18 @@ pilots:
       - SE162321000255-O33384
       - SE162321000255-O33340
       - SE2321000198-016965
+      - SE2321000180-1000
+      - SE2321000180-5HZB
+      - SE2321000180-4BF4
+      - SE2321000180-5L1K
+      - SE2321000180-5M00
+      - SE2321000180-4GVF
+      - SE2321000180-5HNS
+      - SE2321000180-53M7
+      - SE2321000180-5HFQ
+      - SE2321000180-4JH9
+      - SE2321000180-4BF3
+      - SE2321000180-4GZ8
     activated:
       - &pf320
         name: *kf320
