--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -432,6 +432,12 @@ pilots:
       - SE2321000131-E000000000001 # Västra Götalandsregionen
       - SE162321000255-O00001 # Region Skåne
       - SE5565189692-31L # Capio Läkargruppens Kirurgmottagning
+      - SE162321000024-0060738 # Gimo VC
+      - SE162321000024-0016023 # Neurokirurgi
+      - SE162321000024-0020148 # Hörsel och balans
+      - SE162321000024-0060762 # Capio VC Enköping
+      - SE162321000024-0048849 # Plastikkirurgi
+      - SE162321000024-0060752 # Örsundsbro VC
     activated:
       - &pf320
         name: *kf320
