INTYGFV-16114: Activate webcert react for Sörmland.

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -1424,6 +1424,21 @@ pilots:
       - SE2321000131-E000000014694
       - SE2321000131-E000000009019
       - SE2321000131-E000000017140
+      - SE2321000032-1000
+      - SE2321000032-4QZK
+      - SE2321000032-523M
+      - SE2321000032-4CVC
+      - SE2321000032-4CVT
+      - SE2321000032-4W0L
+      - SE2321000032-3XFA
+      - SE2321000032-595S
+      - SE2321000032-5J89
+      - SE2321000032-5PRR
+      - SE2321000032-5LTC
+      - SE2321000032-4ZDR
+      - SE2321000032-4D3W
+      - SE2321000032-3X8A
+      - SE2321000032-4HFG
     activated:
       - &pf320
         name: *kf320
