INTYGFV-16169: Activate webcert react for Västmanland.

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -1453,6 +1453,81 @@ pilots:
       - SE2321000214-0046506
       - SE2321000214-0046923
       - SE2321000214-0038752
+      - SE2321000172-2ZP4
+      - SE2321000172-1833
+      - SE2321000172-141J
+      - SE2321000172-3JGJ
+      - SE2321000172-3H6R
+      - SE2321000172-39CC
+      - SE2321000172-1427
+      - SE2321000172-181Q
+      - SE2321000172-3NQ4
+      - SE2321000172-2CK4
+      - SE2321000172-1BK1
+      - SE2321000172-2CP6
+      - SE2321000172-1BKC
+      - SE2321000172-1BX3
+      - SE2321000172-2NQ6
+      - SE2321000172-1BKH
+      - SE2321000172-3G64
+      - SE2321000172-3V9V
+      - SE2321000172-1BKG
+      - SE2321000172-1720
+      - SE2321000172-29RD
+      - SE2321000172-2CBG
+      - SE2321000172-1BM0
+      - SE2321000172-182T
+      - SE2321000172-1BK4
+      - SE2321000172-1BK5
+      - SE2321000172-1BM1
+      - SE2321000172-13BT
+      - SE2321000172-141W
+      - SE2321000172-3H2W
+      - SE2321000172-141K
+      - SE2321000172-1830
+      - SE2321000172-32CD
+      - SE2321000172-13BW
+      - SE2321000172-2CLJ
+      - SE2321000172-239B
+      - SE2321000172-2KVG
+      - SE2321000172-3RWN
+      - SE2321000172-1BKF
+      - SE2321000172-3H15
+      - SE2321000172-2KL7
+      - SE2321000172-33MG
+      - SE2321000172-3DSW
+      - SE2321000172-1832
+      - SE2321000172-1BWZ
+      - SE2321000172-3VZ2
+      - SE2321000172-1728
+      - SE2321000172-142B
+      - SE2321000172-3FSZ
+      - SE2321000172-141P
+      - SE2321000172-3RSH
+      - SE2321000172-2CP4
+      - SE2321000172-1BX1
+      - SE2321000172-2SH9
+      - SE2321000172-1BK0
+      - SE2321000172-181L
+      - SE2321000172-142C
+      - SE2321000172-1834
+      - SE2321000172-2CP5
+      - SE2321000172-1835
+      - SE2321000172-1BK8
+      - SE2321000172-2SJT
+      - SE2321000172-1BKW
+      - SE2321000172-1BKD
+      - SE2321000172-1831
+      - SE2321000172-36ZK
+      - SE2321000172-3V2K
+      - SE2321000172-141V
+      - SE2321000172-1BKB
+      - SE2321000172-2KHD
+      - SE2321000172-1BX7
+      - SE2321000172-2TB7
+      - SE2321000172-1727
+      - SE2321000172-3HN7
+      - SE2321000172-172B
     activated:
       - &pf320
         name: *kf320
