--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -1,7 +1,7 @@
 project.name=intyg
 
 artifact.name=refdata
-artifact.version=1.0-SNAPSHOT
+artifact.version=1.0.0
 
 git.url=https://github.com/sklintyg/refdata.git
 git.branch=develop
