--- a/Jenkins.properties
+++ b/Jenkins.properties
@@ -10,5 +10,5 @@ builder.image=lib-builder-image
 builder.image.tag=11.0.2
 
 build.args=build
-tagrelease.args=
+tagrelease.args=tagRelease
 upload.args=uploadArchives
