--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ version = System.properties['buildVersion'] ?: '1.0-SNAPSHOT'
 sourceCompatibility = 11
 targetCompatibility = 11
 
+if (System.properties['customBuildName']) {
+    jar.archiveBaseName = System.properties['customBuildName']
+}
+
 task createVersionPropertyFile(type: VersionPropertyFileTask)
 
 uploadArchives.repositories.mavenDeployer {
