--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -439,7 +439,8 @@ pilots:
       - SE162321000024-0060762 # Capio VC Enköping
       - SE162321000024-0048849 # Plastikkirurgi
       - SE162321000024-0060752 # Örsundsbro VC
-      - SE2321000040-4G0G # Region Östergötland, VC Lyckorna
+      - SE2321000040-4CSM # VC Lyckorna, Region Östergötland
+      - SE2321000040-4GJ1 # Enhet under VC Lyckorna
     activated:
       - &pf320
         name: *kf320
