INTYGFV-16307: Activate two more units for SRS in rehabstod and webcert

--- a/src/main/resources/rehabstod/features.yaml
+++ b/src/main/resources/rehabstod/features.yaml
@@ -218,6 +218,8 @@ pilots:
       - SE2321000206-E00321
       - SE2321000206-E00326
       - SE2321000206-E00344
+      - SE2321000032-5PRR
+      - SE2321000230-E02181
     activated:
       - &pf010
         name: *kf010
