INTYGFV-16305: Activate webcert react for Kalmar

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -1529,6 +1529,32 @@ pilots:
       - SE5567695209-5Z6
       - SE5565189692-15R
       - SE2321000115-O45672
+      - SE2321000073-1000
+      - SE2321000073-4C86
+      - SE2321000073-ZJVG
+      - SE2321000073-F3JC
+      - SE2321000073-ZH8L
+      - SE2321000073-ZJVT
+      - SE2321000073-F3JL
+      - SE2321000073-4C89
+      - SE2321000073-ZL93
+      - SE2321000073-4C8D
+      - SE2321000073-ZLV8
+      - SE2321000073-ZJVP
+      - SE2321000073-ZLFR
+      - SE2321000073-F17N
+      - SE2321000073-Z1GJ
+      - SE2321000073-4C88
+      - SE2321000073-ZJH4
+      - SE2321000073-XZWZ
+      - SE2321000073-ZNVS
+      - SE2321000073-ZJP2
+      - SE2321000073-4C87
+      - SE2321000073-ZJ6S
+      - SE2321000073-ZHPL
+      - SE2321000073-Z7HZ
+      - SE2321000073-XZZM
+      - SE2321000073-ZH7B
     activated:
       - &pf320
         name: *kf320
