INTYGFV-16330: Activate webcert react for Jönköping

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -1562,6 +1562,24 @@ pilots:
       - SE2321000230-E00608
       - SE2321000230-E02181
       - SE2321000230-E01250
+      - SE2321000057-493K
+      - SE2321000057-4994
+      - SE2321000057-5SS0
+      - SE2321000057-5SRJ
+      - SE2321000057-5SRR
+      - SE2321000057-6SV3
+      - SE2321000057-5SRH
+      - SE2321000057-5SRT
+      - SE2321000057-7SQR
+      - SE2321000057-C960
+      - SE2321000057-5SRX
+      - SE2321000057-5SRZ
+      - SE2321000057-5ZRG
+      - SE2321000057-5SRN
+      - SE2321000057-5SRP
+      - SE2321000057-6SV4
+      - SE2321000057-D36V
+      - SE2321000057-7485
     activated:
       - &pf320
         name: *kf320
